#10 added events crud
