# public/swagger.json
@@ -228,23 +228,32 @@
 					},
 					"dateTime": {
 						"type": "string",
-						"format": "date-time"
+						"format": "date-time",
+						"nullable": true
 					},
 					"price": {
-						"type": "string"
+						"type": "string",
+						"nullable": true
 					},
 					"status": {
 						"$ref": "#/components/schemas/EEventStatus"
 					},
 					"participantsLimit": {
 						"type": "number",
-						"format": "double"
+						"format": "double",
+						"nullable": true
 					},
 					"description": {
-						"type": "string"
+						"type": "string",
+						"nullable": true
 					},
 					"location": {
-						"$ref": "#/components/schemas/Location"
+						"allOf": [
+							{
+								"$ref": "#/components/schemas/Location"
+							}
+						],
+						"nullable": true
 					},
 					"participants": {
 						"items": {
@@ -523,6 +532,79 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"TEventCreatePayload": {
+				"properties": {
+					"locationId": {
+						"type": "number",
+						"format": "double"
+					},
+					"description": {
+						"type": "string"
+					},
+					"participantsLimit": {
+						"type": "number",
+						"format": "double"
+					},
+					"price": {
+						"type": "string"
+					},
+					"dateTime": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"type": "object"
+			},
+			"TEventUpdatePayload": {
+				"properties": {
+					"status": {
+						"$ref": "#/components/schemas/EEventStatus"
+					},
+					"locationId": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
+					"description": {
+						"type": "string",
+						"nullable": true
+					},
+					"participantsLimit": {
+						"type": "number",
+						"format": "double",
+						"nullable": true
+					},
+					"price": {
+						"type": "string",
+						"nullable": true
+					},
+					"dateTime": {
+						"type": "string",
+						"format": "date-time",
+						"nullable": true
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id"
+				],
+				"type": "object"
+			},
+			"TEventDeletePayload": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"id"
+				],
+				"type": "object"
 			},
 			"TLocationCreatePayload": {
 				"properties": {
@@ -865,6 +947,102 @@
 									"eventId"
 								],
 								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/event/create": {
+			"post": {
+				"operationId": "CreateEvent",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Event"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Events"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TEventCreatePayload"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/event/update": {
+			"put": {
+				"operationId": "UpdateEvent",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Event"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Events"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TEventUpdatePayload"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/event/delete": {
+			"delete": {
+				"operationId": "DeleteEvent",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Events"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/TEventDeletePayload"
 							}
 						}
 					}
