# src/routers/event.router.ts
@@ -1,5 +1,10 @@
 import { EventController } from "../controllers/event.controller";
 import { Request, Router } from "express";
+import {
+  TEventCreatePayload,
+  TEventDeletePayload,
+  TEventUpdatePayload,
+} from "../types/event.types";
 
 export const EventRouter = Router();
 
@@ -52,6 +57,51 @@ EventRouter.delete(
     }
     const data = await eventController.leaveEvent(req.body);
     res.status(200).json({ userLeftEvent: data });
+  },
+);
+
+EventRouter.post(
+  "/create",
+  async (
+    req: Request<
+      Record<string, unknown>,
+      Record<string, unknown>,
+      TEventCreatePayload
+    >,
+    res,
+  ) => {
+    const data = await eventController.createEvent(req.body);
+    res.status(200).json({ createdEvent: data });
+  },
+);
+
+EventRouter.put(
+  "/update",
+  async (
+    req: Request<
+      Record<string, unknown>,
+      Record<string, unknown>,
+      TEventUpdatePayload
+    >,
+    res,
+  ) => {
+    const data = await eventController.updateEvent(req.body);
+    res.status(200).json({ updatedEvent: data });
+  },
+);
+
+EventRouter.delete(
+  "/delete",
+  async (
+    req: Request<
+      Record<string, unknown>,
+      Record<string, unknown>,
+      TEventDeletePayload
+    >,
+    res,
+  ) => {
+    const data = await eventController.deleteEvent(req.body);
+    res.status(200).json({ eventDeleted: data });
   },
 );
 
