# src/types/event.types.ts
@@ -1,7 +1,23 @@
+import { EEventStatus } from "../enums/event-status.enum";
+
 export type TEventCreatePayload = {
   dateTime?: Date;
   price?: string;
   participantsLimit?: number;
   description?: string;
   locationId?: number;
+};
+
+export type TEventUpdatePayload = {
+  id: number;
+  dateTime?: Date | null;
+  price?: string | null;
+  participantsLimit?: number | null;
+  description?: string | null;
+  locationId?: number | null;
+  status?: EEventStatus;
+};
+
+export type TEventDeletePayload = {
+  id: number;
 };
